--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+An introduction to Solidity on Klaytn with simple to advanced examples
