--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,31 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Welcome to Klaytn by Examples! This page contains various Solidity code examples written specifically for Klaytn. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+## What is Klaytn?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Klaytn is a highly optimized, BFT-based public blockchain that aims to meet the enterprise-grade reliability.
+Key design goals are;
 
-## Documentation
+- Immediate finality.
+- High TPS that meets real-world use cases.
+- Lower the cost of running Blockchain Applications.
+- Lower the barriers to entry for end-users.
+- Ease the technology adoption process for industry.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+Klaytn launched its mainnet, [Cypress](https://scope.klaytn.com/), on Jun/27/2019 with the following specifications.
+
+- 1-second block generation and confirmation time.
+- 4,000 transactions per second.
+- Low gas price that is almost 1/10 of Ethereum.
+- Runs EVM (Ethereum Virtual Machine) and supports the execution of Solidity contracts.  
+- 19 reputable corporations worldwide initially formed Klaytn Governance Council to operate consensus nodes. The current number of consensus nodes is shown in the [Klaytnscope](https://scope.klaytn.com/).
+- More than 50 initial service partners have committed to launch Blockchain Applications on Klaytn.
+
+## Where is Klaytn Docs?
+
+Klaytn documentation is available at [https://docs.klaytn.foundation](https://docs.klaytn.foundation).
+
+## What is Klaytn by Examples for?
+
+Klaytn documentation is available at [https://docs.klaytn.foundation](https://docs.klaytn.foundation).
