--- a/pages/basic/gas.mdx
+++ b/pages/basic/gas.mdx
@@ -20,7 +20,7 @@ There are 2 upper bounds to the amount of gas you can spend
 - <ColoredText text="gas limit" color="#e74c3c"/> (max amount of gas you're willing to use for your transaction, set by you)
 - <ColoredText text="block gas limit" color="#e74c3c"/> (max amount of gas allowed in a block, set by the network)
 
-```solidity filename="Immutable.sol" {2} copy
+```solidity filename="Gas.sol" {2} copy
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.20;
 
