--- a/pages/basic/primitive-data-types.mdx
+++ b/pages/basic/primitive-data-types.mdx
@@ -1,10 +1,12 @@
+import ColoredText from '../../components/colored-text'
+
 # Primitive Data Types
 Here we introduce you to some primitive data types available in Solidity.
 
-- ```boolean```
-- ```uint256```
-- ```int256```
-- ```address```
+- <ColoredText text="boolean" color="#e74c3c" code={true} />
+- <ColoredText text="uint256" color="#e74c3c" code={true} />
+- <ColoredText text="int256" color="#e74c3c" code={true} />
+- <ColoredText text="address" color="#e74c3c" code={true} />
 
 ```solidity filename="DataTypes.sol" {2} copy
 // SPDX-License-Identifier: MIT
