--- a/pages/applications/klay-wallet.mdx
+++ b/pages/applications/klay-wallet.mdx
@@ -10,7 +10,7 @@ Only the owner can withdraw.
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.20;
 
-contract EtherWallet {
+contract KlayWallet {
     address payable public owner;
 
     constructor() {
